fixing gap in pannel, buttons padding and ect

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -141,7 +141,7 @@ body{
   box-shadow:inset 0 1px 0 rgba(255,255,255,0.04),0 8px 30px rgba(14,16,40,0.35);
   display:flex;
   flex-direction:column;
-  gap:16px;
+  gap:10px;
   width:100%;
   flex-grow:1;
   justify-content:flex-end;
@@ -151,7 +151,7 @@ body{
   cursor:pointer;
   display:block;
   width:100%;
-  padding:clamp(24px,4vw,20px);
+  padding: 20px;;
   border-radius:999px;
   text-align:center;
   font-weight:700;
@@ -174,7 +174,7 @@ body{
 .cta{
   text-align:center;
   margin-top:16px;
-  margin-bottom:clamp(16px,4vw,30px);
+  margin-bottom:clamp(20px,4vw,30px);
   font-weight:600;
   color:#fff;
   font-size:clamp(18px,4vw,24px);
